--- a/package.json
+++ b/package.json
@@ -22,20 +22,28 @@
     "@angular/router": "~7.1.4",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
+    "@ionic-native/sqlite": "^5.0.0",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.1",
+    "@ionic/storage": "^2.2.0",
+    "@types/jquery": "^3.3.29",
     "cordova-android": "7.1.4",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^2.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-sqlite-storage": "2.6.0",
     "core-js": "^2.5.4",
     "epubjs": "^0.3.83",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "jquery-touch-events": "^1.0.7",
     "jszip": "^3.1.5",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "cordova-plugin-whitelist": "1.3.3",
-    "cordova-plugin-statusbar": "2.4.2",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-ionic-webview": "^2.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.11.4",
@@ -71,7 +79,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
-    }
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   }
 }
