--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.1",
     "@ionic/storage": "^2.2.0",
+    "@sentry/browser": "^4.5.3",
     "@types/jquery": "^3.3.29",
+    "angular-hammer": "^2.2.0",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
