--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^7.2.7",
     "@angular/common": "~7.1.4",
     "@angular/core": "~7.1.4",
     "@angular/forms": "~7.1.4",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.1.4",
     "@angular/router": "~7.1.4",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/navigation-bar": "^5.2.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/sqlite": "^5.0.0",
     "@ionic-native/status-bar": "5.0.0-beta.21",
@@ -44,6 +46,7 @@
     "jquery": "^3.3.1",
     "jquery-touch-events": "^1.0.7",
     "jszip": "^3.1.5",
+    "papaparse": "^5.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -84,7 +87,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-navigationbar": {}
     },
     "platforms": [
       "browser",
