--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jquery-touch-events": "^1.0.7",
     "jszip": "^3.1.5",
     "papaparse": "^5.1.1",
+    "rangy": "^1.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
